--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,9 +9,17 @@
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
+    <style>
+      #map {
+        height: 400px;
+        width: 100%;
+      }
+    </style>
   </head>
 
   <body>
     <h1>Hello World!</h1>
+    <div id="map"></div>
+    <script> <%= someValue %> </script>
   </body>
 </html>
