--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -1,9 +1,52 @@
 // See: https://sass-lang.com/
+* {
+  margin: 0;
+}
 
 body {
-  background-color: #EEE;
+  background-color: rgb(238, 238, 238);
 
   h1 {
     color: #244751;
   }
+}
+
+.navbar {
+  background-color: #88c7ec;
+  padding: 10px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 10;
+  height: 60px;
+
+  &-logo {
+    font-family: Varela Round, sans-serif;
+    font-size: 2rem;
+    color: #FFF;
+    text-decoration: none;
+  }
+
+  &-menu {
+    width: 210px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &-options {
+    font-family: Varela Round, sans-serif;
+    text-decoration: none;
+    color: #FFF;
+    border: solid 1px #FFF;
+    border-radius: 5px;
+    padding: 7px;
+  }
+}
+
+#map {
+  display: flex;
+  flex-direction: column;
+  margin: 30px;
+  height: 550px;
+  width: 850px;
 }
