Updated styling on map

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -11,6 +11,8 @@ body {
   }
 }
 
+// Nav bar
+
 .navbar {
   background-color: #88c7ec;
   padding: 10px 20px;
@@ -49,4 +51,10 @@ body {
   margin: 30px;
   height: 550px;
   width: 850px;
+}
+
+// create a map page
+
+.create-new-map {
+  border-radius: 12px;
 }
