Updated map div

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
 <body>
   <%- include('partials/_header') %>
 
-  <div id="map"></div>
+  <div id="map" class="create-new-map"></div>
 
   <script>
     function initMap() {
