Added form to create a new map

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,8 +18,34 @@
 
 <body>
   <%- include('partials/_header') %>
+  <div class="create-map-container">
+    <div id="map"></div>
+    <form action="#" class="create-new-map">
+      <h2>Create a Mappi</h2>
+      <div class="new-map-title">
+        <label for="new-map-title">Map Title</label><br>
+        <input type="text" id="new-map-title" name="new-map-title" required>
+      </div>
 
-  <div id="map" class="create-new-map"></div>
+      <div class="new-map-description">
+        <label for="new-map-description">Map Description</label><br>
+        <input type="text" id="new-map-descprition" name="new-map-description" required>
+      </div>
+
+      <div class="new-map-category">
+        <label>Map Category</label><br>
+        <select id = "new-map-category">
+          <option></option>
+          <option value = "cat-restaurant">Restaurants</option>
+          <option value = "cat-cafe">Cafes</option>
+          <option value = "cat-bar">Bars</option>
+          <option value = "cat-parks">Parks</option>
+        </select>
+      </div>
+
+      <input class="new-map-submit" type="submit" value="Create!">
+    </form>
+  </div>
 
   <script>
     function initMap() {
