--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -4,7 +4,7 @@
 }
 
 body {
-  background-color: rgb(238, 238, 238);
+  background-color: #ebeef0
 
   h1 {
     color: #244751;
@@ -20,7 +20,7 @@ body {
   justify-content: space-between;
   align-items: center;
   z-index: 10;
-  height: 60px;
+  height: 8vh;
 
   &-logo {
     font-family: Varela Round, sans-serif;
@@ -43,18 +43,56 @@ body {
     border-radius: 5px;
     padding: 7px;
   }
-}
 
-#map {
-  display: flex;
-  flex-direction: column;
-  margin: 30px;
-  height: 550px;
-  width: 850px;
+  &-logged-in {
+    display:flex
+
+  }
 }
 
 // create a map page
 
-.create-new-map {
+.create-map-container {
+  height: 92vh;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+div#map {
+  display: flex;
+  flex-direction: column;
+  margin: 30px;
+  height: 80vh;
+  width: 75%;
   border-radius: 12px;
 }
+
+form.create-new-map {
+  height: 40vh;
+  width: 25%;
+  margin: 30px 30px 30px 0;
+  padding: 10px;
+  border-radius: 12px;
+  font-family: Varela Round, sans-serif;
+  box-shadow: 0, 0, 1rem, rgb(0, 0, 0 /15%);
+  background-color: #cee3f2;
+  color: #848c91;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+input.new-map-submit {
+  height: 35px;
+  width: 100px;
+  padding: 5px;
+  background-color: #FFF;
+  border: 1px solid #848c91;
+  border-radius: 5px;
+  font-family: Varela Round, sans-serif;
+  font-size: 1rem;
+  color: #848c91;
+  align-self: flex-end;
+}
+
