--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,36 @@
   <div id="map" class="create-new-map"></div>
 
   <script>
+    // This id will have to be stored in the database
+    let markerId = 0;
+    const uniqueId = function() {
+        return ++markerId;
+    }
+
+    let markers = {};
+    const createMarker = function(map, position) {
+        const id = uniqueId(); // get new id
+        const marker = new google.maps.Marker({ // create a marker and set id
+            id: id,
+            position: position,
+            map: map,
+            draggable: true,
+            animation: google.maps.Animation.DROP
+        });
+        // add click listener
+        marker.addListener("click", () => {
+          deleteMarker(marker.id);
+        })
+        markers[id] = marker; // cache created marker to markers object with id as its key
+        return marker;
+    }
+
+    const deleteMarker = function(id) {
+        const marker = markers[id]; // find the marker by given id
+        marker.setMap(null);
+        delete markers[id];
+    }
+
     function initMap() {
       // The location of Uluru
       const myLatlng = { lat: -25.363, lng: 131.044 };
@@ -32,12 +62,6 @@
       const map = new google.maps.Map(document.getElementById("map"), {
         zoom: 4,
         center: uluru,
-      });
-
-      // The marker, positioned at Uluru
-      const marker = new google.maps.Marker({
-        position: uluru,
-        map: map,
       });
 
       let infoWindow = new google.maps.InfoWindow({
@@ -51,7 +75,11 @@
           lng: mapsMouseEvent.latLng.toJSON().lng
         }
         // Set lat long
-        console.log(latLng);
+        // const marker = new google.maps.Marker({
+        //   position: latLng,
+        //   map: map
+        // });
+        createMarker(map, latLng);
 
       });
 
