Updated Map Description input type to textarea

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
   <div class="create-map-container">
     <div id="map"></div>
     <form action="#" class="create-new-map">
-      <h2>Create a Mappi</h2>
+      <h2>Create Mappi</h2>
       <div class="new-map-title">
         <label for="new-map-title">Map Title</label><br>
         <input type="text" id="new-map-title" name="new-map-title" required>
@@ -29,7 +29,7 @@
 
       <div class="new-map-description">
         <label for="new-map-description">Map Description</label><br>
-        <input type="text" id="new-map-descprition" name="new-map-description" required>
+        <textarea id="new-map-descprition" name="new-map-description" required></textarea>
       </div>
 
       <div class="new-map-category">
@@ -43,7 +43,7 @@
         </select>
       </div>
 
-      <input class="new-map-submit" type="submit" value="Create!">
+      <input class="new-map-submit" type="submit" value="Create">
     </form>
   </div>
 
