Updated form action

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
   <%- include('partials/_header') %>
   <div class="create-map-container">
     <div id="map"></div>
-    <form action="#" class="create-new-map">
+    <form action="" class="create-new-map">
       <h2>Create Mappi</h2>
       <div class="new-map-title">
         <label for="new-map-title">Map Title</label><br>
