--- a/views/map.ejs
+++ b/views/map.ejs
@@ -92,8 +92,9 @@
 
       const contentString = `
       <div class="infowindow">
-        <div>My id is ${marker.id}</div>
-        <img style= "width: 100px; height: 100px;" src="https://i.imgur.com/uVU4ffo.jpg">
+        <h1>My id is ${marker.id}</h1>
+        <img src="https://i.imgur.com/uVU4ffo.jpg">
+        <p>This is my long long long very very very very long description</p>
         <button onclick="editMarker(${marker.id})" id="editbtn${marker.id}">Edit</button>
         <button onclick="deleteMarker(${marker.id})" id="deletebtn${marker.id}">Delete</button>
       </div>
