--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -125,6 +125,45 @@ div#map {
   background-color: $black;
 }
 
+// Infowindow
+
+.infowindow {
+
+  height: 180px;
+  width: 160px;
+  word-wrap: break-word;
+
+  h1 {
+    font-family: Varela Round, sans-serif;
+    font-size: 1rem;
+    font-weight: bold;
+    margin-bottom: 7px;
+  }
+
+  p {
+    font-family: Varela Round, sans-serif;
+    font-size: 0.7rem;
+    margin-bottom: 7px;
+  }
+
+  img {
+    width: 90px;
+    height: 90px;
+    margin-bottom: 7px;
+  }
+
+  button {
+    font-family: Varela Round, sans-serif;
+    font-size: 0.8rem;
+    background-color: $white;
+    border: 1px solid $grey;
+    border-radius: 5px;
+    color: $grey;
+    height: 1.5rem;
+    margin-right: 5px;
+  }
+}
+
 // Map info and option to edit mappi
 .map-info-side {
   height: 70vh;
