Changed button to display save pin

--- a/views/map.ejs
+++ b/views/map.ejs
@@ -46,7 +46,7 @@
             <input type="text" id="update-pin-url" name="update-pin-url" required>
         </div>
 
-        <input class="update-pin-submit" type="submit" value="Edit Pin">
+        <input class="update-pin-submit" type="submit" value="Save Pin">
     </form>
     </div>
 
