update options in index ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,13 +32,13 @@
       </div>
 
       <div class="new-map-category">
-        <label>Map Category</label><br>
-        <select id="new-map-category" required>
+        <label for="new-map-category" >Map Category</label><br>
+        <select id="new-map-category" name="new-map-category" required>
           <option selected="true" disabled="disabled" value="">Choose Category</option>
-          <option value="cat-restaurant">Restaurants</option>
-          <option value="cat-cafe">Cafes</option>
-          <option value="cat-bar">Bars</option>
-          <option value="cat-parks">Parks</option>
+          <option value="restaurant">Restaurants</option>
+          <option value="cafe">Cafes</option>
+          <option value="bar">Bars</option>
+          <option value="parks">Parks</option>
         </select>
       </div>
 
