click creat btn now redirects to /maps/create

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
 <body>
   <%- include('partials/_header') %>
   <div class="create-map-container">
-    <form action="/maps" method="POST" class="create-new-map">
+    <form action="/maps/create" method="POST" class="create-new-map">
       <h2>Create Mappi</h2>
       <div class="new-map-title">
         <label for="new-map-title">Map Title</label><br>
