--- a/views/map.ejs
+++ b/views/map.ejs
@@ -23,7 +23,7 @@
 
     <div class="map-info-side">
 
-      <form action="#" class="map-info">
+      <form action="/maps/save" type="POST" class="map-info">
         <h2>Title: <%= mapData.title %></h2>
         <h3>Description: <%= mapData.description %></h3>
         <input class="save-map" type="submit" value="Save Mappi">
