--- a/views/map.ejs
+++ b/views/map.ejs
@@ -23,11 +23,11 @@
 
     <div class="map-info-side">
 
-      <form action="#" class="map-info">
+      <form action="" class="map-info">
         <h2>Title: <%= mapData.title %></h2>
         <h3>Description: <%= mapData.description %></h3>
         <input class="save-map" type="submit" value="Save Mappi">
-      </form>
+      </formaction=class=>
 
       <form action="#" class="update-pin">
         <h2 id="update-pin-id">Edit Mappi Pin</h2>
