--- a/views/map.ejs
+++ b/views/map.ejs
@@ -55,7 +55,9 @@
 
   <script>
     // This id will have to be stored in the database
+    let infowindow = null;
     let markerId = 0;
+    let selectedMarkerId = 0;
     const mapId = <%= mapData.id %>;
     const uniqueId = function() {
         return ++markerId;
@@ -77,8 +79,7 @@
       document.querySelector("input#update-pin-title").focus();
 
       document.querySelector('#update-pin-submit').addEventListener('click',(value)=>{
-        console.log("current id", id);
-        console.log(markers[id]);
+        console.log("current id", selectedMarkerId);
       })
     };
 
@@ -105,25 +106,31 @@
       });
 
 
-      const contentString = `
-      <div class="infowindow">
-        <h1>My id is ${marker.id}</h1>
-        <img src="https://i.imgur.com/uVU4ffo.jpg">
-        <p>This is my long long long very very very very long description</p>
-        <button onclick="editMarker(${marker.id})" id="editbtn${marker.id}">Edit</button>
-        <button onclick="deleteMarker(${marker.id})" id="deletebtn${marker.id}">Delete</button>
-      </div>
-      `;
 
-      const infowindow = new google.maps.InfoWindow({
-        content: contentString,
-      });
 
 
       // add click listener
       marker.addListener("click", () => {
+        if (infowindow){
+          infowindow.close();
+        }
+
+        const contentString = `
+        <div class="infowindow">
+          <h1>My id is ${marker.id}</h1>
+          <img src="https://i.imgur.com/uVU4ffo.jpg">
+          <p>This is my long long long very very very very long description</p>
+          <button onclick="editMarker(${marker.id})" id="editbtn${marker.id}">Edit</button>
+          <button onclick="deleteMarker(${marker.id})" id="deletebtn${marker.id}">Delete</button>
+        </div>
+        `;
+
+      infowindow = new google.maps.InfoWindow({
+        content: contentString,
+      });
+        selectedMarkerId = marker.id;
         infowindow.open(map, marker);
-      })
+      });
 
 
       markers[id] = marker; // cache created marker to markers object with id as its key
